--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -12,12 +12,12 @@
             <h2>Explore the world!</h2>
         </div>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="travel_recommendation.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <ul>
-            <li><input type="text" id="" placeholder="Search"> </li>
+            <li><input type="text" id="search" placeholder="Enter a destination"> </li>
             <li><button id='btnSearch'>Search</button></li>
             <li><button id='btnReset'>Clear</button></li>
         </ul>
@@ -26,6 +26,12 @@
     <section>
         <div id=greeting>
             <h1>Visit all the places you've always dreamed of!</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+            </p>
+        </div>
+        <div>
+
         </div>
     </section>
     
