--- a/about.html
+++ b/about.html
@@ -19,31 +19,34 @@
         <div></div>
     </nav>
 
-    <div>
-        <h1></h1>
-        <p></p>
-    </div>
-
-    <div>
-        <h2></h2>
-        <div id="person">
-            <div id="name"></div>
-            <div id="person_descripton"></div>
-            <div id="job_title"></div>
+    <section id="section2">
+        <div id="introduction">
+            <h1>ABOUT US</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
         </div>
 
-        <div id="person">
-            <div id="name"></div>
-            <div id="person_descripton"></div>
-            <div id="job_title"></div>
-        </div>
+        <div id="team">
+            <h2>Our Team</h2>
+            <div class="person">
+                <div id="name">John Doe</div>
+                <div id="person_descripton">John is responsible for...</div>
+                <div id="job_title">CEO</div>
+            </div>
 
-        <div id="person">
-            <div id="name"></div>
-            <div id="person_descripton"></div>
-            <div id="job_title"></div>
-        </div>
-    </div>
+            <div class="person">
+                <div id="name">Jane Doe</div>
+                <div id="person_descripton">Jane is responsible for...</div>
+                <div id="job_title">Team Lead</div>
+            </div>
 
+            <div class="person">
+                <div id="name">Third Name</div>
+                <div id="person_descripton">Third name is responsible for...</div>
+                <div id="job_title">Delivery Head</div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
