--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -23,9 +23,9 @@
         </ul>
     </nav>
 
-    <section>
+    <section id="section1">
         <div id=greeting>
-            <h1>Visit all the places you've always dreamed of!</h1>
+            <h1>VISIT ALL THE PLACES YOU'VE ALWAYS DREAMED OF!</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
             </p>
