--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div>
             <h2>Explore the world!</h2>
         </div>
-        <ul>
+        <ul id="nav_middle">
             <li><a href="travel_recommendation.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
