--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,47 @@
         <div>
             <h2>Explore the world!</h2>
         </div>
-        <ul>
+        <ul id="nav_middle">
             <li><a href="travel_recommendation.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div></div>
     </nav>
+
+    <!--
+    name 
+    email
+    message
+    submit button
+    -->
+
+    <section id="section3">
+        <div id="contact">
+            <h1>CONTACT US</h1>
+            <p>Get in touch</p>
+        </div>
+        <form id="form" action="/contact.html">
+            <div>
+                <label for="name">Name:</label><br>
+                <input type="text" id="form_name" name="form_name" value="" placeholder="Enter your name"><br>
+            </div>
+
+            <div>
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email" value=""placeholder="Enter your email"><br>
+            </div>
+            
+            <div>
+                <label for="message">Message:</label><br>
+                <textarea  id="message" name="message" value="" rows="7" placeholder="Enter your message"></textarea><br><br>
+            </div>
+
+            <div>
+                <input id="form_submit" type="submit" value="Submit">
+            </div>
+        </form> 
+    </section>
 
 </body>
 </html>
