--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,8 +17,8 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <ul>
-            <li><input type="text" id="search" placeholder="Enter a destination"> </li>
-            <li><button id='btnSearch'>Search</button></li>
+            <li><input type="text" id="search" placeholder="Enter a keyword"> </li>
+            <li><button id='btnSearch' onclick="searchFunc()">Search</button></li>
             <li><button id='btnReset'>Clear</button></li>
         </ul>
     </nav>
@@ -34,6 +34,6 @@
 
         </div>
     </section>
-    
+    <script src="travel_recommendation.js"></script>    
 </body>
 </html>
